# bao

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp  unix-setup.sh  vcpkg.json  windows-setup.ps1
include/: test.h  utils.h
include/bao/: types.h  utils.h
include/bao/codegen/: generator.h
include/bao/codegen/bytecode/: constpool.h  generator.h  tags.h  vminst.h
include/bao/codegen/native/: generator.h
include/bao/common/: types.h  utils.h
include/bao/filereader/: reader.h
include/bao/lexer/: lexer.h  maps.h  sets.h  token.h
include/bao/mir/: mir.h  translator.h
include/bao/parser/: ast.h  parser.h  types.h
include/bao/sema/: analyzer.h  symtabl.h
include/bao/tests/: test.h
include/filereader/: reader.h
include/lexer/: lexer.h  maps.h  sets.h
src/: test.cpp  utils.cpp
src/codegen/: generator.cpp
src/codegen/bytecode/: constpool.cpp  generator.cpp
src/codegen/native/: generator.cpp
src/common/: utils.cpp
src/filereader/: reader.cpp
src/lexer/: lexer.cpp  maps.cpp
src/mir/: translator.cpp
src/parser/: parser.cpp
src/sema/: analyzer.cpp
src/tests/: bytecode_test.cpp  test.cpp
test/: bytecode_test.goi  test  test.bao  test.bao.bc  test2.bao
